crates/compiler/cypress/tests/snapshots/test_parse__where_clause_multiple_has_across_newlines_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "f : a -> (b -> c)\n    where a implements Hash,\n      b implements Eq,\n      c implements Ord\n\nf\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            Ident=>LowerIdent@0
            InlineTypeColon=>OpColon@1
            (*
                (*
                    (*
                        (*
                            Ident=>LowerIdent@2
                            InlineTypeArrow=>OpArrow@3
                            (BeginParens
                                (*
                                    Ident=>LowerIdent@5
                                    InlineTypeArrow=>OpArrow@6
                                    Ident=>LowerIdent@7
                                EndTypeLambda)
                            EndParens)
                        EndTypeLambda)
                        InlineTypeWhere=>KwWhere@9
                        Ident=>LowerIdent@10
                        InlineKwImplements=>KwImplements@11
                        AbilityName=>UpperIdent@12
                    EndWhereClause)
                    Ident=>LowerIdent@14
                    InlineKwImplements=>KwImplements@15
                    AbilityName=>UpperIdent@16
                EndWhereClause)
                Ident=>LowerIdent@18
                InlineKwImplements=>KwImplements@19
                AbilityName=>UpperIdent@20
            EndWhereClause)
        EndTypeOrTypeAlias)
        HintExpr
        Ident=>LowerIdent@21
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(Ident("f"), WhereClause(WhereClause(WhereClause(Lambda([Name("a")], Lambda([Name("b")], Name("c"))), Name("a"), ["Hash"]), Name("b"), ["Eq"]), Name("c"), ["Ord"]))
Ident("f")

[=== formatted below ===]

